# DevMonitorAI

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.ps1  setup.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_pred.py
backend/alembic/: env.py
backend/alembic/versions/: 77bec728a8fe_add_summary_json_to_insights.py  941dc63122b6_initial_schema.py  e17535ae30af_add_new_columns_to_user_and_insight.py
backend/app/: main.py
backend/app/core/: config.py  database.py  logging_config.py  pricing.py  rate_limit.py  security.py
backend/app/models/: __init__.py  ai_event.py  git_event.py  insight.py  user.py
backend/app/routers/: dashboard.py  events.py  insights.py  users.py
backend/app/schemas/: __init__.py  ai_event.py  chat.py  git_event.py  insight.py  kpi.py  prediction.py  user.py
backend/app/services/: event_service.py  insight_engine.py  metrics.py  ml_predictions.py
backend/tests/: test_dashboard.py  test_events.py  test_insights.py  test_users.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: button.tsx  event-feed.tsx  glass-card.tsx  insight-panel.tsx  kpi-card.tsx  layout.tsx  sidebar.tsx  theme-provider.tsx  widget-panel.tsx
frontend/src/hooks/: use-dashboard-data.ts
frontend/src/lib/: utils.ts
scripts/: devmonitor_agent.py  git_hook.py  seed_demo.py  seed_demo_old.py  test_insight.py
(+12 files in other folders)
